<resources>
	<string name="app_name">Manager</string>
	<string name="no_description"></string>
	<string name="regular_font">fonts/MyriadPro-Regular.ttf</string>
	<string name="bold_font">fonts/MyriadPro-Bold.ttf</string>
	<string name="italic_font">fonts/MyriadPro-It.ttf</string>
	<string name="bold_italic_font">fonts/MyriadPro-BoldIt.ttf</string>
	<string name="loading">Загрузка &#8230;</string>
	<string name="error">Ошибка</string>
	<string name="error_data">Пожалуйста проверьте введенные вами данные и попробуйте еще раз</string>
	<string name="error_login">Пользователь не найден. Проверьте правильность ввода вашего логина и пароля</string>
	<string name="select_field_to_edit">Выберите поле для редактирования</string>
	<string name="error_max_mark_count">Вы уже поставили максимально возможное количество оценок для этого пункта</string>
	<string name="sync_not_possible_network">Вы не подключены к сети интернет. Передача временно невозможна. Повторите попытку позже</string>
	<string name="no_messages_for_sync">Сообщений нет</string>
	<string name="error_no_marks">У элемента пока нет оценок</string>
	<string name="error_no_camera">Не найдено приложение "Камера"</string>
	<string name="check_apply">Проверка сохранена</string>
	<string name="check_delete">Проверка удалена</string>
	<string name="sync">Синхронизация</string>
	<string name="data_check">Проверка данных</string>
	<string name="data_refresh_done">Данные обновлены</string>
	<string name="sync_success">Передача прошла успешно</string>
	<string name="sync_failure">Произошла ошибка при отправке фотографий</string>
	<string name="warning">Внимание</string>
	<string name="no_network">Вы не подключены к сети интернет. Приложение продолжит работу в оффлайн режиме</string>
	<string name="btn_cancel">Отмена</string>
	<string name="btn_back">Назад</string>
	<string name="btn_ok">Продолжить</string>
	<string name="btn_no">Нет</string>
	<string name="btn_yes">Да</string>
	<string name="btn_create">Создать</string>
	<string name="btn_act">Заполнить акт</string>
	<string name="uploading_photo">Отправка фотографии</string>
	<string name="uploading_error">Ошибка при выборе фотографии</string>
	<string name="uploading_photos">Отправка фотографий</string>
	<string name="errorLabel">Ошибка</string>
	<string name="errorConnection">Проверьте подключение к сети интернет</string>
	<string name="imagePostError">Ошибка при отправке документов</string>
	<string name="map_arrive">Продолжить</string>
	<string name="map_repeat">Повторить</string>
	<string name="message">Сообщение</string>
	<string name="btn_update">Продолжить</string>
	<string name="update_title">Версия приложения устарела, необходимо обновить в Google Play!</string>
	<string name="crash_toast_text">В работе программы Facilicom произошла непредвиденная ошибка. Для отправки деталей об ошибке команде разработчиков нажмите кнопку "Да". Приносим свои извинения!</string>
	<string name="quality_camera">Прикрепить изображение</string>
	<string name="username_hint">Имя пользователя</string>
	<string name="password_hint">Пароль</string>
	<string name="enter_to_system">Войти в систему</string>
	<string name="facilityArrival">Прибытие на объект</string>
	<string name="outlook_meeting">Встречи Outlook</string>
	<string name="terrasoft_targets">Задачи Terrasoft</string>
	<string name="facilicom_request">Заявки Facilicom 24</string>
	<string name="interactions">Акты взаимодействий</string>
	<string name="quality_checks">Проверки качества</string>
	<string name="work_with_employees">Заявки подрядчику</string>
	<string name="messages_to_send">Неотправленных сообщений: %1$d</string>
	<string name="object">Объект</string>
	<string name="blank">Бланк</string>
	<string name="search">Поиск</string>
	<string name="choose_type">Выберите тип</string>
	<string name="choose_object">Выберите объект</string>
	<string name="choose_blank">Выберите бланк</string>
	<string name="create_check_error">Вы не заполнили все необходимые поля. Пожалуйста проверьте форму еще раз</string>
	<string name="send_error">Вы не заполнили все обязательные к заполнению поля. Заполните до конца форму перед отправкой</string>
	<string name="send_error_all_empty">Вы не заполнили ни одно поле</string>
	<string name="form_name_template">Форма %1$s %2$s</string>
	<string name="reasons">Примечания</string>
	<string name="save">Запомнить</string>
	<string name="send">Отправить</string>
	<string name="delete">Удалить</string>
	<string name="element">Элемент</string>
	<string name="actSend">Отправляется акт &#8230;</string>
	<string name="actSendOk">Акт успешно отправлен</string>
	<string name="actSendError">Ошибка при отправке Акта</string>
	<string name="act_note_caption">Общее примечание</string>
	<string name="activity_map_caption">Прибытие на объект</string>
	<string name="activity_map_no_location">Не могу определить местоположение</string>
	<string name="activity_map_get_no_location">Не могу определить местоположение</string>
	<string name="activity_map_arrived">Прибытие на объект выполнено</string>
	<string name="activity_map_arrived_no_internet">Ошибка при оформлении прибытия на объект. Проверьте подключение к интернету</string>
	<string name="activity_map_account_list_fail">Ошибка при определении списка объектов по координатам</string>
	<string name="activity_map_account_list_fail_no_internet">Ошибка при загрузке списка объектов по координатам. Проверьте подключение к интернету</string>
	<string name="map_account">Объект</string>
	<string name="map_account_default">Нет</string>
	<string name="activity_map_accounts_nolist">Список объектов пуст</string>
	<string name="activity_map_accounts_choose">Выберите объект</string>
	<string name="activity_map_accounts_progress">Поиск обслуживаемых объектов</string>
	<string name="activity_map_accounts_not_find">В текущем местоположении нет обслуживаемых объектов</string>
	<string name="activity_map_accounts_choose_title">Сообщение</string>
	<string name="activity_map_accounts_choose_ok">Закрыть</string>
	<string name="activity_map_account_format">%1$s (%2$d м)</string>
	<string name="hrmenuactivity_menu_1">Заявка в ООО Мобильные решения</string>
	<string name="hrmenuactivity_menu_2">Заявка на временный персонал</string>
	<string name="hrmenuactivity_menu_3">Регистрация кандидата на обучение</string>
	<string name="hrmenuactivity_menu_4">Допуск на объект</string>
	<string name="hrmenuactivity_menu_5">Отказ в допуске</string>
	<string name="hrmenuactivity_menu_6">Поиск телефона подрядчика</string>
	<string name="request_menu_activity_1">К исполнению</string>
	<string name="request_menu_activity_2">Для оценки</string>
	<string name="request_menu_activity_3">Контроль работ</string>
	<string name="request_menu_activity_4">Поиск заявки</string>
	<string name="request_menu_activity_5">Создать заявку</string>
	<string name="request_menu_activity_6">Заявка в ОРИО</string>
	<string name="request_new_caption">Создание заявки</string>
	<string name="fragment_request_new_caption">Содержание заявки</string>
	<string name="fragment_request_edit_caption">Комментарий</string>
	<string name="request_new_apply">Создать заявку</string>
	<string name="request_edit_apply">Выполнить</string>
	<string name="request_edit_allow">Принять</string>
	<string name="request_edit_disallow">На доработку</string>
	<string name="request_new_photo">Фотографии</string>
	<string name="request_new_validate_title">Заполните поля</string>
	<string name="request_new_done">Заявка создана</string>
	<string name="request_edit_done">Заявка выполнена</string>
	<string name="request_new_progress">Создание заявки</string>
	<string name="request_edit_progress">Выполнение заявки</string>
	<string name="request_accept_progress">Принятие заявки</string>
	<string name="request_rework_progress">Отправление заявки на доработку</string>
	<string name="request_rework_error">Ошибка при отправлении заявки на доработку</string>
	<string name="request_accept_error">Ошибка в принятии заявки</string>
	<string name="request_new_error">Ошибка при создании заявки</string>
	<string name="request_edit_error">Ошибка при выполнении заявки</string>
	<string name="request_control_menu_1">Мои заявки</string>
	<string name="request_control_menu_2">Получена</string>
	<string name="request_control_menu_3">В работе</string>
	<string name="request_control_menu_4">Отложена</string>
	<string name="request_control_menu_5">Выполнена</string>
	<string name="request_control_menu_6">Снята</string>
	<string name="request_control_menu_7">На доработке</string>
	<string name="request_control_menu_8">Просроченные</string>
	<string name="request_list_progress">Обновление списка заявок</string>
	<string name="request_edit_download">Обновление фотографий</string>
	<string name="request_edit_caption">Заявка № %d</string>
	<string name="request_history_caption">История заявка\n№ %d</string>
	<string name="request_list_search_hint">Поиск</string>
	<string name="request_list_empty">Список заявок пуст</string>
	<string name="mobile_appointment">Выберите должность</string>
	<string name="mobile_caption">Заявки в мобильную бригаду</string>
	<string name="mobile_next">Продолжить</string>
	<string name="mobile_comment_next">Сохранить</string>
	<string name="mobile_apply">Добавить запись</string>
	<string name="mobile_alert_title">Сообщение</string>
	<string name="mobile_alert_send">Отправить заявку?</string>
	<string name="mobile_alert_apply">Сохранить заявку?</string>
	<string name="mobile_alert_delete">Удалить запись?</string>
	<string name="mobile_alert_yes">Да</string>
	<string name="mobile_alert_no">Нет</string>
	<string name="mobile_alert_empty">Заявка пуста</string>
	<string name="mobile_alert_no_account">Не заполнено поле Объект</string>
	<string name="mobile_alert_nogroup">Не заполнено поле Номенклатурная группа</string>
	<string name="mobile_alert_period">Ошибка в определении периода</string>
	<string name="mobile_alert_schedule">Не заполнено поле Должность</string>
	<string name="mobile_alert_employee">Не заполнено поле ФИО</string>
	<string name="mobile_alert_price">Не заполнено поле Стоимость</string>
	<string name="mobile_alert_sex">Не заполнено поле Пол</string>
	<string name="mobile_alert_time">Ошибка в определении Временного периода</string>
	<string name="mobile_alert_quantity">Количество сотрудников ограничено %s</string>
	<string name="mobile_alert_date">Дата не попадает в период</string>
	<string name="mobile_alert_no_schedule">Нет доступного штатного расписания (1С)</string>
	<string name="mobile_alert_no_schedule_2">Нет доступного штатного расписания (М)</string>
	<string name="mobile_toast_sent_done">Заявка на мобильную бригаду отправлена</string>
	<string name="mobile_toast_parttime_sent_done">Заявка на подработчиков отправлена</string>
	<string name="mobile_toast_sent_fail">Ошибка при сохранении. Проверте корректность введенных данных, подключение к интернету и попробуйте отправить заявку еще раз</string>
	<string name="mobile_toast_apply">Заявка на мобильную бригаду сохранена</string>
	<string name="mobile_apply_message">Сохранение &#8230;</string>
	<string name="mobile_schedule_get">Проверка доступного штатного расписания &#8230;</string>
	<string name="confirmation_result_label">Обсуждаемые вопросы, итоги общения</string>
	<string name="confirmation_mark">Оценка контакта</string>
	<string name="confirmation_mark_client">Оценка клиента</string>
	<string name="confirmation_result_placeholder">Введите значение</string>
	<string name="task_target">Цель</string>
	<string name="task_text">Текст задачи</string>
	<string name="task_control_text">Комментарий к доработке</string>
	<string name="task_control_apply">Принять</string>
	<string name="task_control_postponed">На доработку</string>
	<string name="calendar_apply_appointment">Сохранить</string>
	<string name="calendar_apply_cancel">Удалить</string>
	<string name="calendar_apply_declain">Отменить</string>
	<string name="calendar_edit_title">Встреча</string>
</resources>