<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginTop="10dp"
	android:orientation="vertical">

	<LinearLayout
		style="?attr/panelBackground"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="10dp">

		<ru.facilicom24.manager.views.FontTextView
			style="?attr/panelText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="3dp"
			android:text="@string/task_control_text"/>

		<TextView
			android:id="@+id/commentTextView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/rounded_white_rect_light_gray_borders"
			android:ellipsize="end"
			android:gravity="start|top"
			android:hint="@string/confirmation_result_placeholder"
			android:lines="3"
			android:padding="5dip"
			android:textColor="@color/black"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:orientation="horizontal">

		<ru.facilicom24.manager.views.FontButton
			android:id="@+id/doFontButton"
			style="?attr/formButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="5dp"
			android:layout_marginRight="5dp"
			android:layout_weight="1"
			android:text="@string/task_control_apply"/>

		<ru.facilicom24.manager.views.FontButton
			android:id="@+id/postponedFontButton"
			style="?attr/formButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dp"
			android:layout_marginStart="5dp"
			android:layout_weight="1"
			android:text="@string/task_control_postponed"/>

	</LinearLayout>
</LinearLayout>
