<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	style="?attr/appBackground"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="ru.facilicom24.manager.activities.CalendarEditActivity">

	<fragment
		android:id="@+id/captionFragment"
		android:name="ru.facilicom24.manager.fragments.CaptionSimpleFragment"
		android:layout_width="match_parent"
		android:layout_height="45dp"
		tools:layout="@layout/fragment_caption"/>

	<ru.facilicom24.manager.views.FontTextView
		android:id="@+id/titleFontTextView"
		style="@style/BoldBaseText18sp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/captionFragment"
		android:layout_margin="10dp"
		android:gravity="center"
		android:text="@string/calendar_edit_title"/>

	<LinearLayout
		android:id="@+id/buttonsLinearLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_margin="10dp">

		<ru.facilicom24.manager.views.FontButton
			android:id="@+id/applyAppointmentFontButton"
			style="?attr/formButton"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/calendar_apply_appointment"/>

		<ru.facilicom24.manager.views.FontButton
			android:id="@+id/cancelAppointmentFontButton"
			style="?attr/formButton"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginStart="10dp"
			android:layout_weight="1"
			android:text="@string/calendar_apply_cancel"/>

		<ru.facilicom24.manager.views.FontButton
			android:id="@+id/declainAppointmentFontButton"
			style="?attr/formButton"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/calendar_apply_declain"/>

	</LinearLayout>

	<ListView
		android:id="@+id/appointmentFormListView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@id/buttonsLinearLayout"
		android:layout_below="@id/titleFontTextView"
		android:cacheColorHint="@android:color/transparent"
		android:divider="@android:color/transparent"
		android:dividerHeight="1dp"
		android:keepScreenOn="true">

	</ListView>
</RelativeLayout>
