<LinearLayout
	style="?attr/appBackground"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<fragment
		android:id="@+id/captionFragment"
		android:name="ru.facilicom24.manager.fragments.CaptionSimpleFragment"
		android:layout_width="match_parent"
		android:layout_height="45dp"
		tools:layout="@layout/fragment_caption"/>

	<ru.facilicom24.manager.views.FontTextView
		style="@style/BoldWhiteText14sp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dip"
		android:layout_marginTop="10dip"
		android:gravity="center"
		android:text="@string/activity_map_caption"
		android:textColor="@color/black"
		android:textSize="18sp"/>

	<WebView
		android:id="@+id/mapWebView"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"/>

	<fragment
		android:id="@+id/accountSelector"
		android:name="ru.facilicom24.manager.fragments.InteractionItem"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		tools:layout="@layout/interaction_item"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<ru.facilicom24.manager.views.FontButton
			android:id="@+id/mapApplyButton"
			style="?attr/formButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:layout_weight="1"
			android:text="@string/map_arrive"/>

		<ru.facilicom24.manager.views.FontButton
			android:id="@+id/mapRetryButton"
			style="?attr/formButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:layout_weight="1"
			android:text="@string/map_repeat"/>

	</LinearLayout>
</LinearLayout>
