<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	style="?attr/appBackground"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<fragment
		android:id="@+id/captionFragment"
		android:name="ru.facilicom24.manager.fragments.CaptionFragment"
		android:layout_width="match_parent"
		android:layout_height="45dp"
		tools:layout="@layout/fragment_caption"/>

	<RelativeLayout
		android:id="@+id/content"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/captionFragment"
		android:paddingBottom="5dp"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:paddingTop="5dp">

		<LinearLayout
			android:id="@+id/up"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_marginBottom="10dp"
			android:orientation="vertical">

			<ru.facilicom24.manager.views.FontTextView
				android:id="@+id/form_name"
				style="@style/BoldBaseText18sp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dp"
				android:gravity="center"/>

			<RelativeLayout
				style="?attr/panelBackground"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="5dp">

				<ru.facilicom24.manager.views.FontTextView
					android:id="@+id/object_label"
					style="?attr/panelText"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_marginEnd="5dp"
					android:layout_marginRight="5dp"
					android:gravity="start|center_vertical"
					android:text="@string/object"/>

				<ru.facilicom24.manager.views.FontTextView
					android:id="@+id/object"
					style="@style/BoldWhiteText18sp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_toEndOf="@id/object_label"
					android:layout_toRightOf="@id/object_label"
					android:background="@drawable/rounded_white_rect_light_gray_borders"
					android:gravity="start|center_vertical"
					android:padding="5dp"
					android:textColor="@color/light_gray"/>
			</RelativeLayout>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/footer"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_above="@id/comment"
			android:paddingTop="10dp">

			<ImageButton
				android:id="@+id/mark_zero"
				style="?attr/formButton"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="2.5dp"
				android:layout_weight="1"
				android:adjustViewBounds="true"
				android:contentDescription="@string/no_description"
				android:scaleType="fitCenter"/>

			<ImageButton
				android:id="@+id/mark_one"
				style="?attr/formButton"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="2.5dp"
				android:layout_weight="1"
				android:adjustViewBounds="true"
				android:contentDescription="@string/no_description"
				android:scaleType="fitCenter"/>

			<ImageButton
				android:id="@+id/mark_two"
				style="?attr/formButton"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="2.5dp"
				android:layout_weight="1"
				android:adjustViewBounds="true"
				android:contentDescription="@string/no_description"
				android:scaleType="fitCenter"/>

			<ImageButton
				android:id="@+id/photo"
				style="?attr/formButton"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="2.5dp"
				android:layout_weight="1"
				android:adjustViewBounds="true"
				android:contentDescription="@string/no_description"
				android:scaleType="fitCenter"/>

		</LinearLayout>

		<ru.facilicom24.manager.views.FontButton
			android:id="@+id/comment"
			style="?attr/formButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_margin="2.5dp"
			android:text="@string/act_note_caption"/>

		<ExpandableListView
			android:id="@+id/form"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_above="@id/footer"
			android:layout_below="@id/up"
			android:background="@color/white"
			android:cacheColorHint="#00000000"
			android:childDivider="@color/light_gray"
			android:choiceMode="singleChoice"
			android:divider="@color/light_gray"
			android:dividerHeight="1dp"
			android:groupIndicator="@android:color/transparent"
			android:listSelector="@android:color/transparent"
			android:overScrollFooter="#00000000"
			android:scrollbarStyle="outsideOverlay"/>

	</RelativeLayout>
</RelativeLayout>
