<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	style="?attr/appBackground"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<fragment
		android:id="@+id/captionFragment"
		android:name="ru.facilicom24.manager.fragments.CaptionSimpleFragment"
		android:layout_width="match_parent"
		android:layout_height="45dp"
		tools:layout="@layout/fragment_caption"/>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/captionFragment">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="10dp"
			android:paddingTop="5dp">

			<ru.facilicom24.manager.views.FontTextView
				style="@style/BoldBaseText18sp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="5dp"
				android:gravity="center"
				android:text="@string/element"/>

			<LinearLayout
				style="?attr/panelBackground"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dp"
				android:orientation="vertical"
				android:padding="5dp">

				<ru.facilicom24.manager.views.FontTextView
					android:id="@+id/form"
					style="?attr/panelText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/rounded_white_rect_light_gray_borders"
					android:gravity="center"
					android:padding="5dp"
					android:textColor="@color/light_gray"/>

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dp">

					<ru.facilicom24.manager.views.FontTextView
						android:id="@+id/object_label"
						style="@style/BoldWhiteText14sp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerVertical="true"
						android:layout_marginEnd="5dp"
						android:layout_marginRight="5dp"
						android:gravity="center"
						android:text="@string/object"/>

					<ru.facilicom24.manager.views.FontTextView
						android:id="@+id/object"
						style="@style/BoldWhiteText18sp"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_toEndOf="@id/object_label"
						android:layout_toRightOf="@id/object_label"
						android:background="@drawable/rounded_white_rect_light_gray_borders"
						android:gravity="center_vertical|start"
						android:padding="5dp"
						android:textColor="@color/light_gray"/>

				</RelativeLayout>
			</LinearLayout>

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dp"
				android:background="@color/white"
				android:padding="10dp">

				<ru.facilicom24.manager.views.FontTextView
					android:id="@+id/zone"
					style="@style/BoldBaseText16sp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="10dp"
					android:gravity="center"/>

				<ru.facilicom24.manager.views.FontTextView
					android:id="@+id/number"
					style="@style/BaseText16sp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_alignParentStart="true"
					android:layout_below="@id/zone"
					android:layout_marginEnd="10dp"
					android:layout_marginRight="10dp"/>

				<ru.facilicom24.manager.views.FontTextView
					android:id="@+id/element"
					style="@style/BaseText16sp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@id/zone"
					android:layout_toEndOf="@id/number"
					android:layout_toRightOf="@id/number"
					android:minLines="4"/>

			</RelativeLayout>

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="20dp">

				<ImageView
					android:id="@+id/btn_remove_1"
					android:layout_width="wrap_content"
					android:layout_height="40dp"
					android:layout_alignParentEnd="true"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:layout_marginBottom="10dp"
					android:layout_marginLeft="15dp"
					android:layout_marginRight="15dp"
					android:layout_marginTop="10dp"
					android:contentDescription="@string/no_description"
					android:scaleType="fitCenter"
					android:src="@drawable/trash_bin"/>

				<it.sephiroth.android.library.widget.HListView
					android:id="@+id/marks"
					android:layout_width="match_parent"
					android:layout_height="60dp"
					android:layout_toLeftOf="@id/btn_remove_1"
					android:layout_toStartOf="@id/btn_remove_1"
					android:choiceMode="singleChoice"
					android:divider="@android:color/transparent"
					android:listSelector="@drawable/green_border_rect"
					app:hlv_dividerWidth="10dp"/>

			</RelativeLayout>

			<RelativeLayout
				android:id="@+id/comment_pane"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:visibility="gone">

				<ImageView
					android:id="@+id/btn_remove_2"
					android:layout_width="wrap_content"
					android:layout_height="40dp"
					android:layout_alignParentEnd="true"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:layout_marginBottom="10dp"
					android:layout_marginLeft="15dp"
					android:layout_marginRight="15dp"
					android:layout_marginTop="10dp"
					android:contentDescription="@string/no_description"
					android:scaleType="fitCenter"
					android:src="@drawable/trash_bin"/>

				<ru.facilicom24.manager.views.FontTextView
					android:id="@+id/comment"
					style="@style/BaseText16sp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_toLeftOf="@id/btn_remove_2"
					android:layout_toStartOf="@id/btn_remove_2"
					android:background="@color/white"
					android:gravity="start|top"
					android:lines="6"
					android:padding="5dp"/>

			</RelativeLayout>
		</LinearLayout>
	</ScrollView>
</RelativeLayout>
